--- a/dashboard2/public/stylesheets/liftium.css
+++ b/dashboard2/public/stylesheets/liftium.css
@@ -3,6 +3,7 @@ body {
   background-color: #EEE;
   font-family: Arial,sans-serif;
   font-size: 12px;
+  color: #333;
 }
 
 a img {
@@ -14,21 +15,22 @@ a {
   text-decoration: none; /* Nick wrote: I don't like this. */
 }
 
+input:focus, textarea:focus, select:focus {
+	background-color: #FFFFE0;
+}
+
 #header {
 	background:transparent url(/images/head.gif) repeat-x scroll 0 0;	
 	height: 71px;
 }
 
 #logo {
-	width: 1000px;
-	margin: 0 auto;
-	padding-left: 20px;
+	padding-left: 100px;
 }
 
 #container {
 	min-width: 500px;
-	margin: 0 auto;
-	padding-left: 20px;
+	padding-left: 100px;
 	position: absolute; /* Have the container be as wide as the content */
 /*
   width: 75%;
@@ -54,12 +56,22 @@ a {
 	border-right: 1px solid #D0D0D0;
 	border-left: 1px solid #D0D0D0;
 }
+
 #titlebar h1 {
 	font-weight:bold;
 	height:51px;
 	line-height:50px;
 	padding:0 20px;
 	font-size: 18px;
+}
+
+.fieldset input[type=text] {
+	margin-top:6px;
+}
+
+.fieldset input[type=text] {
+	margin-bottom:10px;
+	width: 300px;
 }
 
 #flash_notice, #flash_error {
