--- a/dashboard2/app/views/ad_formats/index.html.erb
+++ b/dashboard2/app/views/ad_formats/index.html.erb
@@ -1,9 +1,12 @@
 <% title "Ad Formats" %>
 
-<table class="record_listing">
+<p><%= link_to "Create new Ad Format", new_ad_format_path %></p>
+
+<table class="record_listing" width="500">
   <tr class="record_listing_header">
     <th>Ad Format Name</th>
     <th>Size</th>
+    <th colspan="3">Actions</th>
   </tr>
   <% for ad_format in @ad_formats %>
     <tr class="record_row_<%= cycle("odd", "even")%>">
@@ -16,4 +19,3 @@
   <% end %>
 </table>
 
-<p><%= link_to "New Ad Format", new_ad_format_path %></p>
