More tweaks to form

--- a/dashboard2/app/views/networks/_form.html.erb
+++ b/dashboard2/app/views/networks/_form.html.erb
@@ -13,7 +13,7 @@
     <%= select("network", "pay_type", @network.pay_types, {:include_blank => true}) %>
   </div>
   <div class="fieldset">
-    <%= f.label :brand_safety_level %><br />
+    <%= f.label :brand_safety_level %> <span class="hint">1=janky, 10=Text</span><br />
     <%= select("network", "brand_safety_level", [1,2,3,4,5,6,7,8,9,10], {:include_blank => true}) %>
   </div>
   <div class="fieldset">
@@ -22,39 +22,42 @@
     <%= radio_button "network", "enabled", "false"%>No
   </div>
   <div class="fieldset">
-    <%= f.label :supports_threshold, nil, :class => "label_for_radio" %>
+    <%= f.label :supports_threshold, "Backup/Default tags", :class => "label_for_radio" %>
     <%= radio_button "network", "supports_threshold", "true"%>Yes
     <%= radio_button "network", "supports_threshold", "false"%>No
   </div>
   <div class="fieldset">
-    <%= f.label :default_always_fill, nil, :class => "label_for_radio" %>
+    <%= f.label :default_to_always_fill, nil, :class => "label_for_radio" %>
     <%= radio_button "network", "default_always_fill", "true"%>Yes
     <%= radio_button "network", "default_always_fill", "false"%>No
   </div>
   <div class="fieldset">
-    <%= f.label :us_only, nil, :class => "label_for_radio" %>
+    <%= f.label :us_only, "United States Only", :class => "label_for_radio" %>
     <%= radio_button "network", "us_only", "true"%>Yes
     <%= radio_button "network", "us_only", "false"%>No
   </div>
   <div class="fieldset">
-    <%= f.label :comments %><br />
-    <%= f.text_area :comments, {:rows => 5} %>
-  </div>
-  <div class="fieldset">
-    <%= f.label :contact_info %><br />
+    <%= f.label :contact_info, "Contact Information" %><br />
     <%= f.text_area :contact_info, {:rows => 5} %>
+    <span class="hint">Account Reps, etc.</span>
   </div>
   <div class="fieldset">
-    <%= f.label :billing_info %><br />
-    <%= f.text_field :billing_info, {:rows => 5} %>
+    <%= f.label :billing_info, "Billing Information" %><br />
+    <%= f.text_field :billing_info, {:rows => 5} %><br />
+    <span class="hint">Net 30, Net 60, etc.</span>
   </div>
   <div class="fieldset">
     <%= f.label :scraping_instructions %><br />
-    <%= f.text_area :scraping_instructions, {:rows => 5} %>
+    <%= f.text_area :scraping_instructions, {:rows => 5} %><br />
+    <span class="hint">Where/How to login for reporting information</span>
+  </div>
+  <div class="fieldset">
+    <%= f.label :comments, "Other Comments" %><br />
+    <%= f.text_area :comments, {:rows => 5} %><br />
   </div>
   <div class="fieldset">
     <%= f.label :tag_template %><br />
-    <%= f.text_area :tag_template , {:rows => 8}%>
+    <%= f.text_area :tag_template , :class => "tag_input"%>
   </div>
   <p><%= liftium_submit "Save Changes" %></p>
 <% end %>
