--- a/dashboard2/app/views/networks/show.html.erb
+++ b/dashboard2/app/views/networks/show.html.erb
@@ -46,7 +46,7 @@
 </p>
 <p>
   <strong>Tag Template:</strong>
-  <%=h @network.tag_template %>
+  <pre><%=h @network.tag_template %></pre>
 </p>
 <p>
   <strong>Scraping Instructions:</strong>
