icons, create new button moved to the title bar

--- a/dashboard2/app/views/ad_formats/index.html.erb
+++ b/dashboard2/app/views/ad_formats/index.html.erb
@@ -1,6 +1,7 @@
+<% @title_bar_right_text = '<a href="' + new_ad_format_path + '"><img alt="" src="/images/icons/add.png"></a> ' + (link_to "Create New Ad Format", new_ad_format_path) %>
 <% title "Ad Formats" %>
 
-<p><%= link_to "Create new Ad Format", new_ad_format_path %></p>
+<br clear="all">
 
 <table class="record_listing" width="500">
   <tr class="record_listing_header">
