--- a/dashboard2/app/views/networks/index.html.erb
+++ b/dashboard2/app/views/networks/index.html.erb
@@ -1,6 +1,7 @@
-<% title "Networks" %>
+<% @title_bar_right_text = '<a href="' + new_network_path + '"><img alt="" src="/images/icons/add.png"></a> ' + (link_to "Create New Ad Network", new_network_path) %>
 
-<p><%= link_to "Create new Network", new_network_path %></p>
+<% title "Ad Networks" %>
+<br clear="all">
 
 <table class="record_listing" width="800">
   <tr class="record_listing_header">
