--- a/dashboard2/public/stylesheets/liftium.css
+++ b/dashboard2/public/stylesheets/liftium.css
@@ -31,6 +31,7 @@ input:focus, textarea:focus, select:focus {
 	padding-left: 100px;
 }
 
+
 #container { 
 	min-width: 500px;
 	padding-left: 100px;
@@ -55,11 +56,19 @@ input:focus, textarea:focus, select:focus {
 	border-left: 1px solid #D0D0D0;
 }
 
+#title_bar_right_text {
+	float: right;
+	margin-right: 21px;
+	margin-top: 30px;
+	font-size: 14px;
+}
+
 #titlebar h1 {
+	float:left;
 	font-weight:bold;
 	height:51px;
 	line-height:50px;
-	padding:0 20px;
+	padding:0 21px;
 	font-size: 18px;
 }
 
