--- a/dashboard2/app/views/publishers/index.html.erb
+++ b/dashboard2/app/views/publishers/index.html.erb
@@ -1,8 +1,13 @@
+<% @title_bar_right_text = '<a href="' + new_publisher_path + '"><img alt="" src="/images/icons/add.png"></a> ' + (link_to "Create New Publisher", new_publisher_path) %>
+<!--
+<p><%= link_to "Create new Publisher", new_publisher_path %></p>
+-->
+
 <% title "Publishers" %>
 
-<p><%= link_to "Create new Publisher", new_publisher_path %></p>
+<br clear="all"/>
 
-<table class="record_listing" width="500">
+<table class="record_listing" width="500" cellspacing="0" cellpadding="0"><!-- Cellspacing/paddding added for IE 6 -->
   <tr class="record_listing_header">
     <th>Site Name</th>
     <th>Site Url</th>
