--- a/dashboard2/app/views/tags/index.html.erb
+++ b/dashboard2/app/views/tags/index.html.erb
@@ -1,8 +1,10 @@
+<% @title_bar_right_text = '<a href="' + new_tag_path + '"><img alt="" src="/images/icons/add.png"></a> ' + (link_to "Create New Tag", new_tag_path) %>
+
 <% title "Tags" %>
 
-<p><%= link_to "Create new Tag", new_tag_path %></p>
+<br clear="all"/>
 
-<table class="record_listing" width="800">
+<table class="record_listing" width="800" cellpadding="0" cellspacing="0">
   <tr class="record_listing_header">
     <th>Tag Name</th>
     <th>Tier</th>
