--- a/dashboard2/public/stylesheets/liftium.css
+++ b/dashboard2/public/stylesheets/liftium.css
@@ -1,19 +1,21 @@
+/* Items are organized by section, then alphabetical. Please keep it that way. */
+
 body {
-  margin: 0;
-  background-color: #EEE;
-  font-family: Arial,sans-serif;
-  font-size: 12px;
-  color: #333;
+	background-color: #EEE;
+	color: #333;
+	font-family: Arial,sans-serif;
+	font-size: 12px;
+	margin: 0;
 }
 
 /*** Page elements ***/
 a img {
-  border: none;
+	border: none;
 }
 
 a {
-  color: #06F;
-  text-decoration: none; /* Nick wrote: I don't like this. */
+	color: #06F;
+	text-decoration: none; /* Nick wrote: I don't like this. */
 }
 
 input:focus, textarea:focus, select:focus {
@@ -22,15 +24,6 @@ input:focus, textarea:focus, select:focus {
 
 
 /*** Wrappers, page/structure ***/
-#header {
-	background:transparent url(/images/head.gif) repeat-x scroll 0 0;	
-	height: 71px;
-}
-
-#logo {
-	padding-left: 100px;
-}
-
 
 #container { 
 	min-width: 500px;
@@ -41,31 +34,40 @@ input:focus, textarea:focus, select:focus {
 
 #content {
 	background: #FFF;
+	border-right: 1px solid #D0D0D0;
+	border-left: 1px solid #D0D0D0;
+	border-bottom: 1px solid #D0D0D0;
 	padding-left: 20px;
 	padding-top: 15px;
 	padding-right: 20px;
 	padding-bottom: 20px;
-	border-right: 1px solid #D0D0D0;
-	border-left: 1px solid #D0D0D0;
-	border-bottom: 1px solid #D0D0D0;
+}
+
+#header {
+	background:transparent url(/images/head.gif) repeat-x scroll 0 0;	
+	height: 71px;
+}
+
+#logo {
+	padding-left: 100px;
 }
 
 
 /*** Title Bar ***/
 #titlebar {
 	background:transparent url(/images/titlebar_bg.gif) repeat-x scroll 0 0;	
-	height: 51px;
 	border-right: 1px solid #D0D0D0;
 	border-left: 1px solid #D0D0D0;
+	height: 51px;
 }
 
 #titlebar h1 {
 	float:left;
+	font-size: 18px;
 	font-weight:bold;
 	height:51px;
 	line-height:50px;
 	padding:0 21px;
-	font-size: 18px;
 }
 
 #title_bar_right_text {
@@ -89,26 +91,24 @@ input:focus, textarea:focus, select:focus {
 .fieldset input[type=text], .fieldset textarea {
 	width: 325px;
 }
+
+.fieldset label {
+	color: #000;
+	font-size: 14px;
+	line-height: 20px;
+}
+
 .fieldset select {
 	width: 182px;
 }
 
-.fieldset label {
-	line-height: 20px;
-	color: #000;
-	font-size: 14px;
-}
-
 .fieldset .left_label {
+	clear:both;
 	display:block;
 	float:left;
-	clear:both;
 	width:150px;
 }
 
-.input_for_number {
-	width: 175px !important; /* Nick wrote: I don't understand why this is needed */
-}
 
 .fieldset .hint {
 	font-size: 11px;
@@ -122,7 +122,17 @@ input:focus, textarea:focus, select:focus {
 	height: 175px;
 }
 
+/* In fieldset */.input_for_number {
+	width: 175px !important; /* Nick wrote: I don't understand why the important is needed */
+}
+
+
 /*** Record Listings ***/
+
+.record_column {
+	border-right:1px solid #CCC;
+}
+
 .record_listing { /* the table */
 	border-spacing: 0;
 	border-bottom:1px solid #CCC;
@@ -134,18 +144,17 @@ input:focus, textarea:focus, select:focus {
 }
 
 .record_listing td, .record_listing th { /* the table */
-	padding: 6px;
 	font-size: 12px;
 	line-height: 10px;
+	padding: 6px;
 }
-
 
 .record_listing_header { /* table header */
 	background:#666;
 	border-right:1px solid #FFF;
 	color:#FFF;
-	text-align:left;
 	line-height: 17px;
+	text-align:left;
 }
 
 .record_row_odd {
@@ -153,84 +162,80 @@ input:focus, textarea:focus, select:focus {
 }
 
 .record_row_even {
-        background-color: #E3E3E3;
-}
-
-.record_column {
-	border-right:1px solid #CCC;
+	background-color: #E3E3E3;
 }
 
 
 /*** Rails messages ***/
 #flash_notice, #flash_error {
-  padding: 5px 8px;
-  margin: 10px 0;
+	margin: 10px 0;
+	padding: 5px 8px;
 }
 
 #flash_notice {
-  background-color: #f7fff0;
-  border: solid 1px #a7e147;
-  background-image:url(/images/success1.gif);
-  background-position:20px center;
-  background-repeat:no-repeat;
-  padding: 15px; 
-  text-indent: 50px;
-  font-weight: bold;
-  font-size: 14px;
+	background-color: #f7fff0;
+	background-image:url(/images/success1.gif);
+	background-position:20px center;
+	background-repeat:no-repeat;
+	border: solid 1px #a7e147;
+	padding: 15px; 
+	font-weight: bold;
+	font-size: 14px;
+	text-indent: 50px;
 }
 
 #flash_error {
-  background-color: #ffdfdf;
-  border: solid 1px #df3e4e;
-  background-image:url(/images/error1.gif);
-  background-position:20px center;
-  background-repeat:no-repeat;
-  padding: 15px; 
-  text-indent: 50px;
-  font-weight: bold;
-  font-size: 14px;
+	background-color: #ffdfdf;
+	background-image:url(/images/error1.gif);
+	background-position:20px center;
+	background-repeat:no-repeat;
+	border: solid 1px #df3e4e;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 15px; 
+	text-indent: 50px;
 }
 
 .fieldWithErrors {
-  display: inline;
+	display: inline;
 }
 
 #errorExplanation {
-  width: 450px;
-  border: 2px solid #CF0000;
-  padding: 0;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
+	background-color: #f0f0f0;
+	border: 2px solid #CF0000;
+	padding: 0;
+	padding-bottom: 12px;
+	margin-bottom: 20px;
+	width: 450px;
 }
 
 #errorExplanation h2 {
-  background-color: #ffdfdf;
-  border: solid 1px #df3e4e;
-  background-image:url(/images/error1.gif);
-  background-position:20px center;
-  background-repeat:no-repeat;
-  padding-right: 15px; 
-  padding-top: 15px; 
-  padding-bottom: 15px; 
-  padding-left: 65px; 
-  font-weight: bold;
-  font-size: 14px;
-  margin: 0;
+	background-color: #ffdfdf;
+	background-image:url(/images/error1.gif);
+	background-position:20px center;
+	background-repeat:no-repeat;
+	border: solid 1px #df3e4e;
+	font-size: 14px;
+	font-weight: bold;
+	margin: 0;
+	padding-right: 15px; 
+	padding-top: 15px; 
+	padding-bottom: 15px; 
+	padding-left: 65px; 
 }
 
 #errorExplanation p {
-  color: #333;
-  margin-bottom: 0;
-  padding: 8px;
+	color: #333;
+	margin-bottom: 0;
+	padding: 8px;
 }
 
 #errorExplanation ul {
-  margin: 2px 24px;
+	margin: 2px 24px;
 }
 
 #errorExplanation ul li {
-  font-size: 12px;
-  line-height: 20px;
-  list-style: circle;
+	font-size: 12px;
+	line-height: 20px;
+	list-style: circle;
 }
