--- a/dashboard2/app/views/networks/index.html.erb
+++ b/dashboard2/app/views/networks/index.html.erb
@@ -9,17 +9,17 @@
     <th>Pay Type</th>
     <th>Enabled</th>
     <th>Supports Threshold</th>
-    <th>Us Only</th>
-    <th>Brand Safety Level</th>
+    <th>US Only</th>
+    <th>Brand Safety</th>
     <th colspan="3">Actions</th>
   </tr>
   <% for network in @networks %>
     <tr class="record_row_<%= cycle("odd", "even")%>">
       <td class="record_column"><%=h network.network_name %></td>
       <td class="record_column"><%=h network.pay_type %></td>
-      <td class="record_column"><%= network.enabled_h %></td>
-      <td class="record_column"><%= network.supports_threshold_h %></td>
-      <td class="record_column"><%= network.us_only_h %></td>
+      <td class="record_column"><%= network.enabled ? image_tag("/images/icons/tick.png") : image_tag("/images/icons/cross.png") %></td>
+      <td class="record_column"><%= network.supports_threshold ? image_tag("/images/icons/tick.png") : image_tag("/images/icons/cross.png") %></td>
+      <td class="record_column"><%= network.us_only ? image_tag("/images/icons/tick.png") : image_tag("/images/icons/cross.png") %></td>
       <td class="record_column"><%=h network.brand_safety_level %></td>
       <td class="record_action"><%= link_to "View", network, :action=> :show %></td>
       <td class="record_action"><%= link_to "Edit", edit_network_path(network) %></td>
