--- a/dashboard2/app/views/publishers/index.html.erb
+++ b/dashboard2/app/views/publishers/index.html.erb
@@ -1,29 +1,29 @@
 <% @title_bar_right_text = '<a href="' + new_publisher_path + '"><img alt="" src="/images/icons/add.png"></a> ' + (link_to "Create New Publisher", new_publisher_path) %>
-<!--
-<p><%= link_to "Create new Publisher", new_publisher_path %></p>
--->
 
 <% title "Publishers" %>
 
 <br clear="all"/>
 
-<table class="record_listing" width="500" cellspacing="0" cellpadding="0"><!-- Cellspacing/paddding added for IE 6 -->
+<table class="record_listing" width="600" cellspacing="0" cellpadding="0"><!-- Cellspacing/paddding added for IE 6 -->
   <tr class="record_listing_header">
     <th>Site Name</th>
-    <th>Site Url</th>
     <th>Brand Safety Level</th>
     <th>Hoptime</th>
-    <th colspan="3">Actions</th>
+    <th colspan="4">Actions</th>
   </tr>
   <% for publisher in @publishers %>
     <tr class="record_row_<%= cycle("odd", "even")%>">
-      <td class="record_column"><%=h publisher.site_name %></td>
-      <td class="record_column"><%=h publisher.site_url %></td>
+      <td class="record_column" nowrap ="true"><%=h publisher.site_name %>
+      </td>
       <td class="record_column"><%=h publisher.brand_safety_level %></td>
       <td class="record_column"><%=h publisher.hoptime %></td>
       <td class="record_action"><%= link_to "View", publisher, :action=> :show %></td>
       <td class="record_action"><%= link_to "Edit", edit_publisher_path(publisher) %></td>
       <td class="record_action"><%= link_to "Delete", publisher, :confirm => 'Are you sure?', :method => "delete" %></td>
+      <td class="record_action">
+	<% if publisher.site_url %>
+	  <a href="<%=h publisher.site_url %>" target="_blank">Site</a>
+	<% end %>
     </tr>
   <% end %>
 </table>
