--- a/dashboard2/app/views/tags/show.html.erb
+++ b/dashboard2/app/views/tags/show.html.erb
@@ -9,8 +9,8 @@
   <%=h @tag.size %>
 </p>
 <p>
-  <strong>Value In Cents:</strong>
-  <%=h @tag.value_in_cents %>
+  <strong>Value:</strong>
+  $<%=h @tag.value %>
 </p>
 <p>
   <strong>Enabled:</strong>
