--- a/dashboard2/app/views/tags/_form.html.erb
+++ b/dashboard2/app/views/tags/_form.html.erb
@@ -31,8 +31,8 @@
     <%= select("tag", "tier", [1,2,3,4,5,6,7,8,9,10], {:include_blank => true}) %>
   </div>
   <div class="fieldset">
-    <%= f.label :value_in_cents, "Value", :class => "left_label" %>
-    <%= f.text_field :value_in_cents, :class => "input_for_number" %>
+    <%= f.label :value, "Value", :class => "left_label" %>
+    $<%= f.text_field :value, :class => "input_for_number" %>
   </div>
   <div class="fieldset">
     <%= f.label :enabled, nil, :class => "left_label"%>
