--- a/dashboard2/app/views/tags/index.html.erb
+++ b/dashboard2/app/views/tags/index.html.erb
@@ -6,11 +6,12 @@
 
 <table class="record_listing" width="800" cellpadding="0" cellspacing="0">
   <tr class="record_listing_header">
-    <th>Tag Name</th>
+    <th>Publisher</th>
+    <th>Tag</th>
     <th>Tier</th>
     <th>Value</th>
     <th>Enabled</th>
-    <th>Sample Rate</th>
+    <th>Sampled</th>
     <th>Freq Cap</th>
     <th>Rej Time</th>
     <th>Size</th>
@@ -18,7 +19,8 @@
   </tr>
   <% for tag in @tags %>
     <tr class="record_row_<%= cycle("odd", "even")%>">
-      <td nowrap="true" class="record_column"><%=h tag.tag_name %></td>
+      <td nowrap="true" class="record_column"><%=h tag.publisher.site_name %></td>
+      <td nowrap="true" class="record_column"><%=h tag.network.network_name %> - <%= tag.tag_name %></td>
       <td class="record_column"><%=h tag.tier %></td>
       <td class="record_column">$<%=h tag.value %></td>
       <td class="record_column"><%= tag.enabled ? image_tag("/images/icons/tick.png") : image_tag("/images/icons/cross.png") %></td>
