--- a/dashboard2/app/views/layouts/application.html.erb
+++ b/dashboard2/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
-    <title><%= h(yield(:title) || "Liftium") %></title>
+    <title><%= h(yield(:title) || "") %> - Liftium.com</title>
     <%= stylesheet_link_tag 'liftium' %>
     <%= yield(:head) %>
   </head>
@@ -17,17 +17,30 @@
 	    <div class="navsection_header">Publishers</div>
 	    <ul>
 	    <li><%= link_to "Tags", tags_url %>
-	    <li><%= link_to "Networks", tags_url %>	
+	    <li><%= link_to "Networks", networks_url %>	
 	    </ul>
        </div>
        <div class="navsection">
 	    <div class="navsection_header">Admin</div>
 	    <ul>
-	    <li><%= link_to "Users", "" %>	
+	    <li><%= link_to "Users", users_url %>	
 	    <li><%= link_to "Ad Formats", ad_formats_url %>	
 	    <li><%= link_to "Publishers", publishers_url %>	
 	    </ul>
        </div>
+       <div class="navsection">
+	    <div class="navsection_header">Account</div>
+		<ul>
+		<% if !current_user %>
+		  <li><%= link_to "Log In", new_user_session_path %>
+		<% else %>
+		  <li><%= link_to "My Account", account_path %>
+		  <li><%= link_to "Logout", user_session_path, :method => :delete %>
+		<% end %>
+		</ul>
+	    </div>
+       </div>
+
     </div>
    
    
@@ -44,6 +57,7 @@
 	</div>
       <%- end -%>
       <div id="content">
+	<br clear="all"><!-- I hate CSS float -->
 
        <%- flash.each do |name, msg| -%>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
@@ -53,4 +67,15 @@
       </div><!-- content -->
     </div><!-- container -->
   </body>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-10292921-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
 </html>
