--- a/dashboard2/app/views/users/edit.html.erb
+++ b/dashboard2/app/views/users/edit.html.erb
@@ -4,5 +4,5 @@
 
 <p>
   <%= link_to "Show", @user %> |
-  <%= link_to "View All", users_path %>
+  <%= link_to "View All Users", users_path %>
 </p>
