--- a/dashboard2/app/views/tags/_form.html.erb
+++ b/dashboard2/app/views/tags/_form.html.erb
@@ -28,7 +28,7 @@
   </div>
   <div class="fieldset">
     <%= f.label :tier, nil, :class => "left_label" %>
-    <%= select("tag", "tier", [1,2,3,4,5,6,7,8,9,10], {:include_blank => true}) %>
+    <%= select("tag", "tier", [1,2,3,4,5,6,7,8,9,10], {:include_blank => true, :selected => 10}) %>
   </div>
   <div class="fieldset">
     <%= f.label :value, "Value", :class => "left_label" %>
